# pwc-pyodide

./: README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  vite-plugin-pyodide.js  vite-plugin-pyodide.test.js  vite.config.js  vitest.config.js
demo/: README.md  hello.py  index.html  main.js
src/pwc_pyodide/: app.js  counter.py  index.html  main.js  update.js
src/pwc_pyodide/static/: site.css
tests/: app.test.js  loadPyodide.test.js  setup.vitest.js  test_counter.py  test_pages.py
