[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pwc_pyodide"
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pytest",
    "playwright",
    "html5lib",
    "pytest-playwright",
]